# ridotto

./: .gitignore  Cargo.toml  build.rs  grammar.metagrammar  grammar.ungram  grammar2.ebnf  sample.ridotto  sample2.ridotto
macros/: Cargo.toml
macros/src/: lib.rs
ridotto-macros/: Cargo.toml
ridotto-macros/src/: lib.rs
src/: ast.rs  compiler.rs  error.rs  main.rs  ns.rs  parse.rs  parse2.rs  parser.rs  scan.rs  scanner.rs  tokens.rs  tree.rs  typeck.rs
tree-sitter-ridotto/: Cargo.toml  binding.gyp  grammar.js  package.json
tree-sitter-ridotto/bindings/node/: binding.cc  index.js
tree-sitter-ridotto/bindings/rust/: build.rs  lib.rs
tree-sitter-ridotto/src/: grammar.json  node-types.json  parser.c
