[package]
edition = '2021'
name = 'ridotto'
version = '0.1.0'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = '0.2'
fnv = '1.0.7'
hex = '*'
paste = '1.0.12'
slotmap = '1.0.6'
tracing = '0.1.37'
tracing-subscriber = '0.3.16'
unicode-segmentation = '1.10.1'
regex = '*'
logos = '*'
