[package]
edition = "2024"
name = "ridotto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slotmap = "1.0.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
#unicode-segmentation = "1.12.1"
logos = "0.15.1"
smallvec = "2.0.0-alpha.11"
indexmap = "2.11.4"

macros = { path = "macros" }
